--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>Z vs N</h1>
+        <div class="header">
+            <h1>Z vs N</h1>
+            <div class="totals">
+                <div class="total-item">
+                    <span class="total-label">Total Z:</span>
+                    <span id="totalZ" class="total-value">0</span>
+                </div>
+                <div class="total-item">
+                    <span class="total-label">Total N:</span>
+                    <span id="totalN" class="total-value">0</span>
+                </div>
+            </div>
+        </div>
         <div class="chart-container">
             <canvas id="myChart"></canvas>
         </div>
